<resources>
    <string name="app_name">Eres mi tipo</string>
    <string name="action_settings">Configuración</string>
    <string name="action_about">Acerca de</string>
    <string name="action_profile">Perfil</string>
    <string name="action_map">Mapa</string>
    <string name="action_info">Información</string>
    <string name="first_name_prompt">Name:</string>
    <string name="about">Acerca de</string>
    <string name="logout">Cerrar sesión</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="about_headline">Company History</string>
    <string name="about_text">In 2006, H+ Sport founder Henry Twill set out to create supplements and nutritional products made from the purest ingredients and backed by scientific and performance data – to provide a strong basis of trust and accountability. His quest began while training for his first 5K marathon, after recovering from a lengthy injury that left him with residual aches, pains, and decreased athletic performance. He was disheartened by the vast array of supplements and nutritional products on the market that subsisted of lofty claims, and little proof of those claims. He yearned for simple and natural ingredients, in their purest form, instead of labels with lengthy chemical names and disclaimers. He also cared immensely for the environment, and wanted to find products that were responsibly sourced. When no products lived up to his strict requirements, Henry set his sights on creating products that catered to his own vision. Today that vision has become H+ Sport…offering a variety of supplements, energy bars, rehydration solutions, and active wear that complement active lifestyles. At the foundation of H+ Sports are products backed by scientific and performance data, that have been created using natural and renewable resources. H+ Sport is dedicated to creating eco-friendly, high-quality, nutrient-rich, nutritional products that enhance active lifestyles. In addition, our H+ Sport Active clothing line is made to be functional, stylish, comfortable, and durable, using all natural and organic fibers.</string>
    <string name="title_activity_about">Acerca de</string>
    <string name="title_activity_arequirements">Requisitos</string>
    <string name="section_requirements_format">Para donar necesitas: %1$d</string>
    <string name="reqDescription1">Tener entre 18 y 65 años</string>
    <string name="reqDescription2">Identificación oficial reciente con fotografía</string>
    <string name="reqDescription3">Hacer ayuno mayor a 4 hrs y menor a 12 hrs</string>
    <string name="title_activity_informacion">Información</string>
    <string name="title_activity_nac_test">Fecha de nacimiento</string>
    <string name="title_activity_nacimiento_test">Fecha de nacimiento</string>
    <string name="hello_blank_fragment">Hello Blank Fragment</string>
    <string name="title_activity_info">Información</string>
    <string name="title_activity_requirements">Requisitos</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_maps">Busca tu centro más cercano</string>
    <string name="title_activity_info_restrictions">Restricciones</string>
    <string name="title_activity_info_benefits">Más información</string>
    <string name="Requisitos_title">Para donar necesitas</string>
    <string name="Requisitos_body_1">Tener entre 18 y 65 años</string>
    <string name="Res_title">No dones</string>
    <string name="Requisitos_body_2">Contar con identificación oficial reciente con fotografía</string>
    <string name="Requisitos_body_3">Hacer ayuno mayor a 4 horas y menor a 12 horas</string>
    <string name="Requisitos_body_4">Beber mucha agua</string>
    <string name="Requisitos_body_5">Evitar que tu último alimento sea grasoso o contenga lácteos</string>
    <string name="Requisitos_body_6">Pesar más de 50 kilos</string>
    <string name="Restricciones_body_2">Asegúrate de no haber consumido alcohol en las últimas 48 horas</string>
    <string name="Restricciones_body_1">No donar si tomaste medicamento para dolor en las últimas 72 horas</string>
    <string name="Restricciones_body_3">No donar si estás embarazada o en periodo de lactancia</string>
    <string name="Restricciones_body_4">No donar si tuviste enfermedades severas del corazón, riñón, hígado, tiroides o cáncer</string>
    <string name="Restricciones_body_5">No donar si tienes alguna enfermedad en la sangre que requiera transfusiones</string>
    <string name="Restricciones_body_6">No donar si te realizaste un tatuaje, acupuntura, piercings o perforaciones</string>
    <string name="Restricciones_body_7">No donar si estás enfermo de gripa</string>
    <string name="Ben_title">Beneficios</string>
    <string name="Beneficios_body_1">Al donar recibirás resultados de las pruebas de sangre que por ley le haremos antes de ser transfundida:\n\nTipo de sangre, VIH, Hepatitis B y C, Sífilis, Brucela y Chagas</string>
    <string name="Beneficios_body_2">Puedes llegar a salvar hasta tres vidas incluyendo la tuya</string>
    <string name="Beneficios_body_3">Los hombres pueden donar hasta 4 veces en un año o 3 las mujeres</string>
    <string name="Beneficios_body_5">Toda su información es confidencial</string>
    <string name="Beneficios_body_6">No genera incremento ni disminución de peso</string>
    <string name="Beneficios_body_7">La donación no acorta la vista</string>
    <string name="Beneficios_body_8">La donación no disminuye las defensas</string>
    <string name="Beneficios_body_9">No hay riesgo de infección porque los materiales son nuevos y desechables</string>
    <string name="Beneficios_body_4">Tu cuerpo recupera la sangre, después de 2 meses puedes donar de nuevo</string>
    <string name="proc_body_1">Nos aseguramos de que no tengas anemia o alguna otra infección</string>
    <string name="proc_body_2">Obtener el nombre completo del paciente a quien vas a donar y en qué hospital se encuentra</string>
    <string name="proc_titulo">Proceso</string>
    <string name="proc_body_3">Tomaremos 10 ml de sangre con equipo estéril y desechable</string>
    <string name="proc_body_4">En este punto debes comunicar cualquier molestia para ser atendido oportunamente</string>
    <string name="proc_body_5">Después de donar permanecerás en reposo y se te dará un refrigerio</string>
    <string name="title_activity_info_proceso">Proceso</string>
    <string name="title_activity_new_map">Encuentra tu centro</string>
    <string name="title_activity_main2">Test</string>
    <string name="title_activity_test_activity_n">Test</string>
    <string name="title_activity_register_user">Nuevo registro</string>
</resources>