<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="mx.iteso.sergio.emt_ad.MainActivity">
    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:title="@string/action_profile"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_info"
        android:orderInCategory="101"
        android:title="@string/action_info"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_map"
        android:orderInCategory="102"
        android:title="@string/action_map"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="103"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>
